src/Day18/examples/const_set/const_set.cpp
#include <set>
#include <iostream>

int main( ) {
   using namespace std;
   const set<int> s1 = {1, 2, 3};
   //s1 = {4}; // error: no viable overloaded '='
}
